Email Notification & WebSocket Notification